porgress with home page

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,18 @@
         />
         <link rel="apple-touch-icon" href="./apple-icon.png" />
         <title>YessWeb</title>
+        <script src="https://cdn.tailwindcss.com"></script>
+        <script>
+            tailwind.config = {
+              theme: {
+                extend: {
+                  colors: {
+                    primary: '#0040FF',
+                  }
+                }
+              }
+            }
+          </script>
     </head>
     <body class="bg-gray-100">
         <noscript>You need to enable JavaScript to run this app.</noscript>
