--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
             }
           </script>
     </head>
-    <body class="bg-gray-100">
+    <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
         <!--
