mod of home page

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
                 extend: {
                   colors: {
                     primary: '#0040FF',
+                    blueGray: "#4F5C82"
                   }
                 }
               }
