--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
         <link rel="apple-touch-icon" href="./apple-icon.png" />
         <title>YessWeb</title>
         <script src="https://cdn.tailwindcss.com"></script>
+        <script src="https://apis.google.com/js/api.js"></script>
         
         <script>
             tailwind.config = {
